<resources>
    <string name="appName">CarSeats</string>
    <string name="title_carSelectionActivity">Select the number of car</string>
    <string name="title_carPeoplesActivity">Select the member</string>
    <string name="title_resultActivity">Result</string>

    <string name="jaNumOfCar"></string>
    <string name="enNumOfCar">No.</string>

    <string name="seaterFive">5-seater</string>
    <string name="seaterFiveDes">From the front : 2-3</string>
    <string name="seaterSeven">7-seater</string>
    <string name="seaterSevenDes">From the front : 2-3-2</string>
    <string name="numOfCar">Num:</string>

    <string name="name">name</string>
    <string name="driver">driver</string>
    <string name="apply">apply</string>
    <string name="totalPassanger">Total number of people.</string>

    <string name="bottomButtonCarSelection">NEXT : Select Member</string>
    <string name="bottomButtonCarPeoples">NEXT : Result</string>
    <string name="bottomButtonResult">switch the handle position</string>

    <string name="error_noCarNull">Not selected car</string>
    <string name="error_noCarZero">Not selected car</string>
    <string name="error_noPeopleNull">Not selected people</string>
    <string name="error_noPeopleZero">Not selected people</string>
    <string name="error_carMoreThanPeople">The number of cars is too many</string>
    <string name="error_sameCarExists">Same car exists</string>
    <string name="error_samePeopleExists">Same people exists</string>
    <string name="error_peopleCantRide">The number of people is too many</string>
    <string name="error_driverIsShortage">The driver is not enough</string>
    <string name="error_noDriver">The driver is not enough</string>

    <string-array name="NumOfCars">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>



</resources>
