<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.osudevelopers.seatallocation.CarSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">




                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/five_seats"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp">

                        <TextView
                            android:id="@+id/name5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seaterFive"
                            android:textSize="24sp"/>

                        <TextView
                            android:id="@+id/loc5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seaterFiveDes"
                            android:textColor="#999999"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="24dp"
                            android:gravity="center"
                            android:text="@string/numOfCar"
                            android:textSize="24dp"/>


                        <Spinner
                            android:id="@+id/spinner5"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:entries="@array/NumOfCars"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/seven_seats"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="5dp" >

                        <TextView
                            android:id="@+id/name7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seaterSeven"
                            android:textSize="24sp"/>

                        <TextView
                            android:id="@+id/loc7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seaterSevenDes"
                            android:textColor="#999999"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="24dp"
                            android:gravity="center"
                            android:text="@string/numOfCar"
                            android:textSize="24dp"/>


                        <Spinner
                            android:id="@+id/spinner7"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:entries="@array/NumOfCars"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/goCarPeoplesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="goCarPeoples"
                android:text="@string/bottomButtonCarSelection"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
